--- a/Portfolio Figma/Pages/experience.html
+++ b/Portfolio Figma/Pages/experience.html
@@ -28,13 +28,13 @@
                     <ul class="experience-list">
                         
                         <li>
-                            <img src="../Assets/Images/Screenshot 2025-08-22 221624.png" alt="" width="500px" height="200px"  style="border-radius: 10px;">
+                            <img src="../Assets/Images/Screenshot 2025-08-22 221624.png" class="lay2" alt="" width="500px" height="200px"  style="border-radius: 10px;">
                             <h3>Portfolio Website Project </h3>
                             <p class="date">(2024)</p>
                             <p>Created a personal portfolio website as a school project, showcasing skills in HTML, CSS, and basic web design. Focused on clean layout, responsive design, and user-friendly navigation..</p>
                         </li>
                         <li>
-                            <img src="../Assets/Images/Screenshot 2025-08-22 222301.png" alt="" width="500px" height="200px" style="border-radius: 10px;">
+                            <img src="../Assets/Images/Screenshot 2025-08-22 222301.png" class="lay2" alt="" width="500px" height="200px" style="border-radius: 10px;">
                             <h3>Pindot Paninda – Online Street Food Ordering Website</h3>
                             <p class="date">(2024)</p>
                             <p>Developed a business-themed website for an online street food ordering service. Designed the interface, structured product listings, and implemented ordering features to simulate real-life e-commerce functionality.</p>
